Fix pager alignment

--- a/src/styl/_elements/_pager.styl
+++ b/src/styl/_elements/_pager.styl
@@ -35,7 +35,6 @@
         background transparent
         color var(--color-base)
         line-height 1em
-        margin-bottom -.1em
         position relative
 
         &:disabled
@@ -43,7 +42,7 @@
             color var(--color-secondary)
 
         svg
-            width 1em
+            width 1.4em
             height @width
 
         // this after pseudo element extend clickable area
